--- a/docs/site-download.texi
+++ b/docs/site-download.texi
@@ -23,7 +23,7 @@ already ship these packages or will soon, their sources can be
 found at:
 
 @itemize
-@item @uref{ftp://ftp.gnome.org/pub/GNOME/2.0.1/latest/sources/,, GnomeCanvas} (GNOME-2.0)
+@item @uref{ftp://ftp.gnome.org/pub/GNOME/sources/libgnomecanvas/,, GnomeCanvas} (GNOME-2.0)
 @item @uref{ftp://ftp.gtk.org/pub/gtk/v2.0/,, Gtk+-2.0}
 @item @uref{http://www.gnu.org/software/guile/guile.html,, Guile-1.4}
 @item @uref{http://www.xiph.org/ogg/vorbis/download/,, Ogg/Vorbis} (at least version 1.0rc3)
