--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Fri Jan 10 07:42:02 2003  Tim Janik  <timj@gtk.org>
+
+	* docs/generated/log2texi.sh (ChangeLog2texi): fix filename markup,
+	added constants matching rules.
+
+Fri Jan 10 04:53:07 2003  Tim Janik  <timj@gtk.org>
+
+	* docs/generated/log2texi.sh: match gxk* symbols.
+
 Thu Jan  9 18:17:00 2003  Tim Janik  <timj@gtk.org>
 
 	* docs/generated/log2texi.sh: fix up markup for types, functions and
