fix download link
svn path=/trunk/; revision=845

--- a/docs/site-download.texi
+++ b/docs/site-download.texi
@@ -10,7 +10,7 @@
 
 @unnumbered Where Can I Get @beastbse{}?
 
-Publically consumable releases can be found at the official ftp location: @uref{ftp://beast.gtk.org/pub/beast/}. Or alternatively via http: @uref{http://beast.gtk.org/pub/beast/}.
+Publically consumable releases can be found at the official ftp location: @uref{ftp://beast.gtk.org/pub/beast/}. Or alternatively via http: @uref{http://beast.gtk.org/beast-ftp/}.
 
 @unnumbered Requirements
 
