--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Jan 14 18:19:26 2003  Tim Janik  <timj@gtk.org>
+
+	* docs/release-notes.texi: changed wording and added markup.
+
 Sat Jan 11 17:05:12 2003  Tim Janik  <timj@gtk.org>
 
 	* docs/site-news.texi: announce the new website.
