--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Tue Jan 21 17:56:46 2003  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstwaveeditor.[hc]: use GxkListWrapper.
+
+	* beast-gtk/gxk/gxklistwrapper.[hc]: moved code here from
+	beast-gtk/gtklistwrapper.[hc] and renamed to GxkListWrapper.
+
+	* beast-gtk/gtklistwrapper.[hc]: removed these.
+
 Mon Jan 20 13:30:40 2003  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstpianoroll.[hc]: implement ::pino_clicked() and
