--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,11 @@
+Wed Jan 22 23:24:50 2003  Tim Janik  <timj@gtk.org>
+
+	* bsecontainer.[hc]: supply sequential ID with ::item-removed as this
+	can't be retrieved afterwards.
+
+	* bsecontainer.proc: export proc to actually fetch an item via its type
+	and sequential id.
+
 Tue Jan 21 03:42:08 2003  Tim Janik  <timj@gtk.org>
 
 	* bsemidireceiver.c (bse_midi_receiver_process_events): keep
